[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rocm-blogs-sphinx"
version = "1.9.5"
authors = [
    {name = "Danny Guan", email = "danny.guan@amd.com"}
]
description = "ROCm Blogs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
rocm_blogs = ["templates/*.html", "static/css/*.css"]
